# reading-companion

./: .gitignore  LICENSE  README.md  pyproject.toml
reading_companion/: __init__.py  config.py  markdown.py  resources.py  storage.py
reading_companion/prompts/: __init__.py  context_builder.md  interviewer.md  pattern_analyzer.md  reflection.md  syllabus_builder.md
reading_companion/tools/: __init__.py  context.py  interview.py  patterns.py  reflection.py  syllabus.py
