[project]
name = "reading-companion"
version = "0.1.0"
description = "A 4-stage reading companion MCP server for Claude Desktop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Somya Anand"}]
keywords = ["mcp", "claude", "reading", "books", "companion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
reading-companion = "reading_companion:main"

[project.urls]
Repository = "https://github.com/aby0/reading-companion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reading_companion"]

[tool.hatch.build]
include = [
    "reading_companion/**/*.py",
    "reading_companion/**/*.md",
]
